feat: support pvc component
